# request-desktop

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
public/: splashscreen.html
samples/: Docker Engine API.postman_collection.json  OAuth2 Flow.txt
src/: App.css  App.tsx  constants.ts  font-faces.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/migrations/: Docker Engine API.postman_collection.json
src-tauri/src/: collections.rs  constants.rs  environments.rs  main.rs  oauth.rs  oauth2_error.rs  request_handling.rs
src-tauri/src/models/: auth.rs  cookie.rs  description.rs  event.rs  folder.rs  header.rs  info.rs  mod.rs  oauth2response.rs  postman_collection.rs  postman_item.rs  postman_version.rs  query_param.rs  request.rs  request_body.rs  response.rs  response_from_call.rs  script.rs  url.rs  variable.rs
src-tauri/src/postman_lib/: lib.rs  mod.rs
src-tauri/src/postman_lib/v1_0_0/: mod.rs
src-tauri/src/postman_lib/v2_0_0/: mod.rs
src-tauri/src/postman_lib/v2_1_0/: mod.rs
src/components/: APIRequest.tsx  Accordeon.tsx  ContentModel.tsx  FileToUpload.tsx  HeaderDataTable.tsx  Input.tsx  QueryParam.tsx  QueryParamTable.tsx  RequestMethod.tsx  SidebarAccordeon.tsx  Tabs.tsx  UploadFilePreview.tsx
src/constants/: config.ts
src/models/: AuthorizationTypes.tsx  CollectionUpdater.ts  ExtraField.ts  FileUpload.ts  MetaData.ts  OAuth2Models.ts  OAuth2Outcome.ts  (+1 more)
(+83 files in other folders)
